--- a/src/components/GameControlButton.css
+++ b/src/components/GameControlButton.css
@@ -1,6 +1,3 @@
 .game-control-button {
-  aspect-ratio: 1 / 1;
-  margin: 5px 5px 5px 5px;
-
-  border-radius: 50% !important;
+  position: absolute;
 }
